feat: allow users to set custom preview server port
Former-commit-id: ddc0cde5df651e4686591a4cf1381c09fe081d19

--- a/packages/docs/docs/config.mdx
+++ b/packages/docs/docs/config.mdx
@@ -43,6 +43,16 @@ Config.Bundling.setCachingEnabled(false);
 
 The [command line flag](/docs/cli) `--bundle-cache` will take precedence over this option.
 
+### setPreviewServerPort()
+
+Set a custom port for preview server. 
+
+```tsx
+Config.Bundling.setPreviewServerPort(3003);
+```
+
+The [command line flag](/docs/cli) `--preview-server-port` will take precedence over this option.
+
 ## Log
 
 ### setLevel()
