--- a/packages/docs/blog/2021-04-15-remotion-2-0.md
+++ b/packages/docs/blog/2021-04-15-remotion-2-0.md
@@ -12,7 +12,7 @@ This is our biggest and best release so far - today we are unloading a lot of aw
 ## Audio support
 
 <div>
-  <video width="100%" height="100%" controls playsinline autoplay="true" muted loop>
+  <video width="100%" height="100%" controls playsInline autoPlay muted loop>
     <source src="/img/audio.mp4" type="video/mp4" />
   </video>
 </div>
@@ -36,7 +36,7 @@ You can now also completely omit the video from the output and only emit an audi
 ## `@remotion/media-utils` package
 
 <div>
-  <video width="100%" height="100%" controls playsinline autoplay="true" muted loop>
+  <video width="100%" height="100%" controls playsInline autoPlay muted loop>
     <source src="/img/mediautils.mp4" type="video/mp4" />
   </video>
 </div>
@@ -61,7 +61,7 @@ By default the **rich timeline** feature is disabled, but will be enabled by def
 ## ESBuild loader
 
 <div>
-  <video width="100%" height="100%" controls playsinline autoplay="true" muted loop>
+  <video width="100%" height="100%" controls playsInline autoPlay muted loop>
     <source src="/img/esbuild.mp4" type="video/mp4" />
   </video>
 </div>
@@ -71,7 +71,7 @@ The traditional transpilation of Javascript and Typescript using `babel-loader` 
 This will speed up bundling by a lot - hopefully you won't notice any other differences! If you for some reason need to go back to the previous behavior, you may override the Webpack config - [we are releasing a helper that makes it easy](/docs/legacy-babel).
 
 <div>
-  <video width="100%" height="100%" controls playsinline autoplay="true" muted loop>
+  <video width="100%" height="100%" controls playsInline autoPlay muted loop>
     <source src="/img/esbuild-loader.webm" type="video/webm" />
   </video>
 </div>
@@ -93,7 +93,7 @@ Learn more about the [`--frames`](/docs/config#setframerange) CLI option.
 ## `@remotion/gif` component
 
 <div>
-  <video width="100%" height="100%" controls playsinline autoplay="true" muted loop>
+  <video width="100%" height="100%" controls playsInline autoPlay muted loop>
     <source src="/img/gif.mp4" type="video/mp4" />
   </video>
 </div>
@@ -105,7 +105,7 @@ A new GIF component released in the `@remotion/gif` package is now available. Th
 ## Resizable editor panels
 
 <div>
-  <video width="100%" height="100%" controls playsinline autoplay="true" muted loop>
+  <video width="100%" height="100%" controls playsInline autoPlay muted loop>
     <source src="/img/resizeable.mp4" type="video/mp4" />
   </video>
 </div>
@@ -123,7 +123,7 @@ const opacity = interpolate(frame, [0, 10, durationInFrames - 10, durationInFram
 ## 170+ tests added
 
 <div>
-  <video width="100%" height="100%" controls playsinline autoplay="true" muted loop>
+  <video width="100%" height="100%" controls playsInline autoPlay muted loop>
     <source src="/img/tests.mp4" type="video/mp4" />
   </video>
 </div>
