--- a/packages/docs/docs/config.mdx
+++ b/packages/docs/docs/config.mdx
@@ -142,6 +142,8 @@ Set a custom location for a [`.env`](https://www.npmjs.com/package/dotenv) file.
 Config.Rendering.setDotEnvLocation('.my-env')
 ```
 
+The [command line flag](/docs/cli) `--env-file` will take precedence over this option.
+
 ## Output
 
 ### setOverwriteOutput()
