--- a/packages/docs/docs/config.mdx
+++ b/packages/docs/docs/config.mdx
@@ -53,7 +53,7 @@ If you specify a port, but it's not available, Remotion will throw an error.
 Config.Bundling.setPort(3003);
 ```
 
-The [command line flag](/docs/cli) `--port` will take precedence over this option.
+The [command line flag](/docs/cli#--port) `--port` will take precedence over this option.
 
 ## Log
 
