--- a/packages/docs/docs/config.mdx
+++ b/packages/docs/docs/config.mdx
@@ -205,9 +205,20 @@ Choose one of the supported codecs: `h264` _(default)_, `h265`, `vp8`, `vp9`.
 Config.Output.setCodec('h265');
 ```
 
-The [command line flag](/docs/cli#--codec) `--codec` will take precedence over this option.
+### setProResProfile()
 
-**See also**: [Encoding guide](/docs/encoding)
+_Available from Version 2.1.6._
+
+Set the ProRes profile. This option is only valid if the codec has been set to `prores`. Possible values: `4444-xq`, `4444`, `hq`, `standard`, `light`, `proxy`. See [here](https://avpres.net/FFmpeg/im_ProRes.html) for explanation of possible values.
+Default: `hq`
+
+```tsx
+Config.Output.setProResProfile('4444');
+```
+
+The [command line flag](/docs/cli#--prores-profile) `--prores-profile` will take precedence over this option.
+
+**See also**: [Encoding guide](/docs/encoding), [Transparent videos](/docs/transparent-videos)
 
 ### setImageSequence()
 
