better explanation link

--- a/packages/docs/docs/config.mdx
+++ b/packages/docs/docs/config.mdx
@@ -209,7 +209,9 @@ Config.Output.setCodec('h265');
 
 _Available from Version 2.1.6._
 
-Set the ProRes profile. This option is only valid if the codec has been set to `prores`. Possible values: `4444-xq`, `4444`, `hq`, `standard`, `light`, `proxy`. See [here](https://avpres.net/FFmpeg/im_ProRes.html) for explanation of possible values.
+Set the ProRes profile. This option is only valid if the codec has been set to `prores`.
+Possible values: `4444-xq`, `4444`, `hq`, `standard`, `light`, `proxy`.
+See [here](https://video.stackexchange.com/a/14715) for explanation of possible values.
 Default: `hq`
 
 ```tsx
