--- a/packages/docs/docs/transparent-videos.mdx
+++ b/packages/docs/docs/transparent-videos.mdx
@@ -11,7 +11,7 @@ If you are lucky enough to visit the website in one of those supported web brows
 
 <TransparentVideoDemo />
 
-## Creating a WebM with Alpha channel
+## Creating a WebM video with Alpha channel
 
 In order to create a transparent video, you need at least version 1.4 of Remotion. Make sure to not set any background (use the checkerboard button to ensure your video is transparent). In order to render your videos transparent, you need to change 3 settings:
 
@@ -35,7 +35,7 @@ You can also set the settings on the command line:
 --image-format=png --pixel-format=yuva420p --codec=vp8
 ```
 
-## Creating a ProRes with Alpha channels
+## Creating a ProRes video with Alpha channels
 
 If you want to export a transparent video for use in another video editing program, and you are using macOS, ProRes is a more suitable option.
 
