--- a/packages/docs/docs/transparent-videos.mdx
+++ b/packages/docs/docs/transparent-videos.mdx
@@ -40,7 +40,7 @@ You can also set the settings on the command line:
 If you want to export a transparent video for use in another video editing program, Apple ProRes is a more suitable option.
 ProRes is supported by Final Cut Pro, Adobe Premiere and Davinci Resolve.
 
-Supported since v2.1.6, you can set the codec to `prores` and choose a ProRes profile with alpha support: Either: `4444` or `4444-hq`.
+Supported since v2.1.7, you can set the codec to `prores` and choose a ProRes profile with alpha support: Either: `4444` or `4444-hq`. The pixel format must be `yuva444p10le`.
 
 ```tsx
 import {Config} from 'remotion';
