--- a/packages/docs/docs/interpolate.mdx
+++ b/packages/docs/docs/interpolate.mdx
@@ -71,7 +71,7 @@ const driver = spring({
 });
 ```
 
-A [`spring()`](/docs/spring) animation will always animate from 0 to 1.
+A [`spring()`](/docs/spring) animation with it's default settings will animate from 0 to 1.
 Given that knowledge, we can interpolate the spring value to go from 0 to 200.
 
 ```tsx
