--- a/packages/docs/docs/config.mdx
+++ b/packages/docs/docs/config.mdx
@@ -213,6 +213,7 @@ Choose one of the supported codecs: `h264` _(default)_, `h265`, `vp8`, `vp9`.
 - `mp3` will export audio only as an MP3 file _(available from v2.0)_
 - `wav` will export audio only as an WAV file _(available from v2.0)_
 - `aac` will export audio only as an AAC file _(available from v2.0)_
+- `mkv` will export using H264 codec, MKV container format and WAV audio codec. _(available from v2.1.12)_
 
 ```tsx
 Config.Output.setCodec('h265');
