--- a/packages/docs/docs/transparent-videos.mdx
+++ b/packages/docs/docs/transparent-videos.mdx
@@ -5,6 +5,19 @@ title: Transparent videos
 
 import { TransparentVideoDemo } from "../components/TransparentVideoDemo";
 
+```twoslash include example
+const MyVideo: React.FC<{
+  transparent: boolean;
+}> = ({transparent}) => {
+  return (
+    <div style={{backgroundColor: transparent ? undefined : 'white', flex: 1}}>
+      {/* Omit opaque background based on `transparent` prop */}
+    </div>
+  )
+}
+// - MyVideo
+```
+
 Chrome and Firefox support WebM videos with alpha channels. That means that on these browsers, you can embed videos with transparency.
 
 If you are lucky enough to visit the website in one of those supported web browsers, check it out:
@@ -21,7 +34,7 @@ In order to create a transparent video, you need at least version 1.4 of Remotio
 
 If you want to set these options and persist them, add this to your `remotion.config.ts` file (create it if you don't yet have one);
 
-```tsx
+```tsx twoslash
 import {Config} from 'remotion';
 
 Config.Rendering.setImageFormat('png');
@@ -42,7 +55,7 @@ ProRes is supported by Final Cut Pro, Adobe Premiere and Davinci Resolve.
 
 Supported since v2.1.7, you can set the codec to `prores` and choose a ProRes profile with alpha support: Either: `4444` or `4444-hq`. The pixel format must be `yuva444p10le`.
 
-```tsx
+```tsx twoslash
 import {Config} from 'remotion';
 
 Config.Rendering.setImageFormat('png');
@@ -61,21 +74,16 @@ You can also set the settings on the command line:
 
 Given the poor browser support, consider making two versions of a video, one with alpha channel, and an opaque video as a fallback. You can achieve this in Remotion using standard React props:
 
-```tsx {2}
-const MyVideo: React.FC<{
-  transparent: boolean;
-}> = ({transparent}) => {
-  return (
-    <div style={{backgroundColor: transparent ? undefined : 'white', flex: 1}}>
-      {/* Omit opaque background based on `transparent` prop */}
-    </div>
-  )
-}
+```tsx twoslash {1}
+// @include: example-MyVideo
 ```
 
 It's a good practice to set a default when defining the composition:
 
-```tsx {8-10}
+```tsx twoslash {7-9}
+import { Composition } from "remotion";
+// @include: example-MyVideo
+// ---cut---
 <Composition
   id="my-video"
   component={MyVideo}
