fix: inline code titles and use bash instead of console

--- a/packages/docs/docs/transparent-videos.mdx
+++ b/packages/docs/docs/transparent-videos.mdx
@@ -44,7 +44,7 @@ Config.Output.setCodec('vp8');
 
 You can also set the settings on the command line:
 
-```console
+```bash
 --image-format=png --pixel-format=yuva420p --codec=vp8
 ```
 
@@ -66,7 +66,7 @@ Config.Output.setProResProfile('4444');
 
 You can also set the settings on the command line:
 
-```console
+```bash
 --image-format=png --pixel-format=yuva444p10le --codec=prores --prores-profile=4444
 ```
 
