refactor: format all code blocks

--- a/packages/docs/docs/interpolate.mdx
+++ b/packages/docs/docs/interpolate.mdx
@@ -23,13 +23,13 @@ At frame 20, we want the opacity to be 1.
 Using the following snippet, we can calculate the current opacity for any frame:
 
 ```ts twoslash
-import {useCurrentFrame, interpolate} from 'remotion'
+import {interpolate, useCurrentFrame} from 'remotion'
 
-const frame = useCurrentFrame(); // 10
+const frame = useCurrentFrame() // 10
 const opacity = interpolate(frame,
   [0, 20],
-  [0, 1]
-); // 0.5
+  [0, 1],
+) // 0.5
 ```
 
 ## Example: Fade in and out
@@ -41,15 +41,15 @@ At the end, the opacity should be 0.
 We can interpolate over multiple points in one go and use [`useVideoConfig()`](/docs/use-video-config) to determine the duration of the composition.
 
 ```ts twoslash
-import {useCurrentFrame, interpolate, useVideoConfig} from 'remotion'
+import {interpolate, useCurrentFrame, useVideoConfig} from 'remotion'
 
-const frame = useCurrentFrame();
-const {durationInFrames} = useVideoConfig();
+const frame = useCurrentFrame()
+const {durationInFrames} = useVideoConfig()
 const opacity = interpolate(
   frame,
   [0, 20, durationInFrames - 20, durationInFrames],
 // v--v---v----------------------v
-  [0, 1,  1,                     0]
+  [0, 1,  1,                     0],
 )
 ```
 
@@ -102,7 +102,7 @@ Consider the following interpolation which is supposed to animate the scale over
 
 ```tsx twoslash
 import {interpolate, useCurrentFrame} from 'remotion'
-const frame = useCurrentFrame();
+const frame = useCurrentFrame()
 // ---cut---
 const scale = interpolate(frame, [0, 20], [0, 1])
 ```
@@ -112,11 +112,9 @@ To prevent this, this we can use the `extrapolateLeft` and `extrapolateRight` op
 
 ```tsx twoslash
 import {interpolate, useCurrentFrame} from 'remotion'
-const frame = useCurrentFrame();
+const frame = useCurrentFrame()
 // ---cut---
-const scale = interpolate(frame, [0, 20], [0, 1], {
-  extrapolateRight: 'clamp'
-});
+const scale = interpolate(frame, [0, 20], [0, 1], {extrapolateRight: 'clamp'})
 ```
 
 ## Reference
@@ -164,10 +162,10 @@ Function which allows you to customize the input, for example to apply a certain
 By default, the input is left unmodified, resulting in a pure linear interpolation. [Read the documentation for the built-in easing functions](/docs/easing).
 
 ```ts twoslash
-import {useCurrentFrame} from 'remotion';
-const frame = useCurrentFrame();
+import {useCurrentFrame} from 'remotion'
+const frame = useCurrentFrame()
 // ---cut---
-import {interpolate, Easing} from 'remotion';
+import {interpolate, Easing} from 'remotion'
 
 interpolate(frame, [0, 100], [0, 1], {
   easing: Easing.bezier(0.8, 0.22, 0.96, 0.65),
