--- a/packages/docs/docs/freeze.mdx
+++ b/packages/docs/docs/freeze.mdx
@@ -3,29 +3,35 @@ id: freeze
 title: <Freeze />
 sidebar_label: <Freeze />
 ---
-import { FreezeExample } from "../components/FreezeExample/FreezeExample";
 
+import { FreezeExample } from "../components/FreezeExample/FreezeExample";
 
 ```twoslash include example
 const BlueSquare: React.FC = () => <div></div>
 // - BlueSquare
 ```
-_Available from v2.2.0_
 
-Using a Freeze, you can freeze a video to a certain frame.
+_Available from v2.2.0._
+
+When using the `<Freeze/>` component, all of it's children will freeze to the frame that you specify as a prop.
+
+If a component is a child of `<Freeze/>`, calling the `useCurrentFrame()` hook will always return the frame number you specify.
+
+`<Video/>` elements will be paused and `<Audio/>` elements will render muted.
 
 ## API
 
 The Freeze component is a high order component and accepts, besides it's children, the following props:
 
-- `frame` _(required)_: At which frame it's children should freeze. And it makes `useCurrentFrame()` to always return frame number.
+- `frame` _(required)_: At which frame it's children should freeze.
 
-## Example
+## Example usage
 
 ```tsx twoslash
 // @include: example-BlueSquare
-import {Freeze} from 'remotion'
 // ---cut---
+import {Freeze} from 'remotion';
+
 const MyVideo = () => {
   return (
     <Freeze frame={30}>
@@ -35,5 +41,11 @@ const MyVideo = () => {
 }
 ```
 
+## Demo
+
 <FreezeExample />
 
+## See also
+
+- [`<Video/>` Playback speed](video#controlling-playback-speed)
+- [`useCurrentFrame()`](use-current-frame)
