--- a/packages/docs/blog/2021-07-09-remotion-2-2.md
+++ b/packages/docs/blog/2021-07-09-remotion-2-2.md
@@ -5,6 +5,7 @@ author: Jonny Burger
 author_title: Remotion Creator
 author_url: https://github.com/JonnyBurger
 author_image_url: https://avatars2.githubusercontent.com/u/1629785?s=460&u=12eb94da6070d00fc924761ce06e3a428d01b7e9&v=4
+image: /img/2-2-card.png
 ---
 
 import { ThreeDPlayer } from "../components/3DPhonePlayer.tsx";
