--- a/packages/docs/blog/2021-07-09-remotion-2-2.md
+++ b/packages/docs/blog/2021-07-09-remotion-2-2.md
@@ -14,7 +14,7 @@ Welcome to the release notes of Remotion 2.2! It's been a while since v2.1, but 
 
 ## Environment variable support
 
-Us developers use environment variables extensively to manage configuration, secrets and other stuff you don't want to commit to a Github repo. If you write videos with code, environment variables are useful too!
+We developers use environment variables extensively to manage configuration, secrets and other stuff you don't want to commit to a Github repo. If you write videos with code, environment variables are useful too!
 
 We added support for environment variables from the CLI, using a `.env` file, and allowing you to pass variables via our Node.JS APIs too. [Click here to learn more.](/docs/env-variables)
 
@@ -22,7 +22,7 @@ We added support for environment variables from the CLI, using a `.env` file, an
 
 This new core component will freeze all of it's children and make them think that the video is paused at a certain time.
 
-Use it for example to display a still frame from a video:
+You can use it for example to display a still frame from a video:
 
 ```tsx twoslash title="MyVideo.tsx"
 import {Freeze, Video} from 'remotion';
@@ -37,7 +37,7 @@ export const MyVideo = () => {
 }
 ```
 
-However, it works for any content. As you can see the API is dead simple. You can combine it with the [`<Sequence>`](/docs/sequence) API to make any content play, pause, and then continue again.
+However, it works for any content. As you can see the API is dead simple. You can combine it with the [`<Sequence>`](/docs/sequence) API to make any content play, pause and then continue again.
 
 [Read more about the `<Freeze />` component here.](/docs/freeze)
 
@@ -67,7 +67,7 @@ In case you missed it, we released a new helper package for [React Three Fiber](
 <ThreeDPlayer />
 <br/>
 
-Three.JS is admittedly not easy, but with the work that [Poimandres](https://github.com/pmndrs) is doing in making it more approachable and more integrated with React, this is changing rapidly. Creating 3D videos in React and rendering them to real MP4 videos, we are making it possible!
+Three.JS is admittedly not easy, but with the work that [Poimandres](https://github.com/pmndrs) is doing to make it more approachable and more integrated with React, this is changing rapidly. Creating 3D videos in React and rendering them to real MP4 videos, we are making it possible!
 
 Learn more about [`@remotion/three`](/docs/three) and get started using our [template](https://github.com/remotion-dev/template-three).
 
@@ -77,7 +77,7 @@ Creating MP4 videos with React, that's just our marketing tagline. We support a 
 
 We have now added two more:
 
-- ProRes is a codec suitable for video editors using Final Cut Pro, Adobe Premiere or Davinci Resolve. Say you want to create an overlay animation using Remotion and use it in a traditional video cutting program, you can now use ProRes to export the video with an alpha channel and import it many other programs losslessly.
+- ProRes is a codec suitable for video editors using Final Cut Pro, Adobe Premiere or Davinci Resolve. Say you want to create an overlay animation using Remotion and use it in a traditional video cutting program, you can now use ProRes to export the video with an alpha channel and import it to many other programs losslessly.
 
 - The Matroska container format (which can be recognized using the `.mkv` extension) is a format that commonly also just contains the H.264 videos, the same codec used for MP4s. However it has more flexibility for audio and allows lossless audio streams to be contained by the format. MKV support will come in handy for an upcoming Remotion feature, and is the first step in allowing us to go to the moon.
 
@@ -159,7 +159,7 @@ Finally, the [homepage of Remotion](https://remotion.dev) got a makeover! We hop
 - Fixed a bug where environment variables would not be immediately accessible
 - Input props flag can now also be passed for preview
 - Better input validation of the most common functions
-- Improve rendering of very long videos, using less memory and avoiding a Maximum callstack exceeded error message.
+- Improve rendering of very long videos, using less memory and avoiding a maximum callstack exceeded error message.
 - Setting `crf` to 0 is not allowed anymore for H264 videos as it will lead to a video that does not play on all platforms.
 - The docs for `<Sequence />` now have interactive examples.
 - A lot of tests have been added to the core functions.
