add document.fonts.ready API
Former-commit-id: 588deffa96854e25e1b2e39b63c809eeca7787c8

--- a/packages/docs/blog/2021-07-09-remotion-2-2.md
+++ b/packages/docs/blog/2021-07-09-remotion-2-2.md
@@ -109,6 +109,10 @@ This prop allows you to control whether the user is allowed to double click on t
 
 When coding a video, and refreshing the preview, the video would jump back to the first frame which was annoying. Not anymore - if you refresh you are back where you left off!
 
+## Remotion waits for fonts to be loaded
+
+If a Webfont gets loaded via Google Fonts, it would be loaded using `font-display: swap`, which means Remotion would sometimes render a frame before the font is loaded. Now we use the `document.fonts.ready` browser API to make loading webfonts completely seamless for you.
+
 ## Specify a custom `--port`
 
 By default the Remotion preview starts a server on port 3000. Should you want to have it start on a different port for any reason, you can now pass a CLI flag.
@@ -146,8 +150,8 @@ Finally, the [homepage of Remotion](https://remotion.dev) got a makeover! We hop
 
 ## Various Bugfixes
 
-- Fixed a memory leak while calling getCompositions(). (28f86f24)
-- Add emoji support to Dockerfile (#476)
+- Fixed a memory leak while calling getCompositions() [#480](https://github.com/remotion-dev/remotion/pull/480)
+- Add emoji support to Dockerfile [#476](https://github.com/remotion-dev/remotion/pull/476)
 - The preview now shows the current time within a sequence in a timeline (d925768f)
 - TTF fonts can now be loaded locally
 - Fix Remotion Player assuming it's in a rendering environment
